--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -88,7 +88,7 @@
 <p><span class="badge badge-light">New York, NY     New York City</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--936673/?gh_src=82a8057f1'>Site Reliability Engineer | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--936673/?gh_src=82a8057f1'>Site Reliability Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/omvobfwa'>Splunk Careers - Cloud Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  San Francisco Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p>Oct 21, 2019 ... Expedia. Are you looking to join a team that builds foundational infrastructure, 
 automation, and tools at a large scale? Are you passionate about security,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---San-Francisco/Senior-or-Lead-Site-Reliability-Engineer-Government-Cloud---Top-Security-Clearance-Required_JR52112'>Senior or Lead Site Reliability Engineer Government Cloud / Top ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior or Lead Site Reliability Engineer Government Cloud / Top Security 
 Clearance Required. California - San Francisco Virginia - Herndon?...</p>
@@ -284,7 +284,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/plex/job/o19pbfwu'>Plex Careers - Site Reliability Engineering Team Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -343,15 +343,15 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mongodb.com/careers/job/?gh_jid=1659874&gh_src=ab75357b1'>Site Reliability Engineer, Cloud Services (EMEA) | MongoDB</a></h5> 
+<h5><a href='https://www.mongodb.com/careers/job/?gh_jid=1659874&gh_src=ab75357b1'>Site Reliability Engineer, Cloud Services (EMEA) | MongoDB</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/ghm61egbguygwxeyszbfe5w81w'>Site Reliability Engineer | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/ghm61egbguygwxeyszbfe5w81w'>Site Reliability Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -379,7 +379,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -395,7 +395,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1867226'>Job Application for Lead Site Reliability Engineer (python/infrastructure) at Pango Inc. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1867226'>Job Application for Lead Site Reliability Engineer (python/infrastructure) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -409,7 +409,7 @@ believes?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
